syntax = "proto3";

package driver;

option go_package = "lastmile/gen/go/driver";

message Driver {
  string id = 1;
  string name = 2;
  string car_details = 3;
}

message Route {
  string id = 1;
  string driver_id = 2;
  repeated string target_station_ids = 3;
  int32 available_seats = 4;
  string destination = 5;
}


message RegisterDriverRequest {
  Driver driver = 1;
}

message RegisterDriverResponse {
  string id = 1;
}

message RegisterRouteRequest {
  Route route = 1;
}

message RegisterRouteResponse {
  string id = 1;
}

message ListDriversRequest {}

message ListDriversResponse {
  repeated Driver drivers = 1;
  repeated Route routes = 2;
}

service DriverService {
  rpc RegisterDriver(RegisterDriverRequest) returns (RegisterDriverResponse);
  rpc RegisterRoute(RegisterRouteRequest) returns (RegisterRouteResponse);
  rpc ListDrivers(ListDriversRequest) returns (ListDriversResponse);
}
